--- a/app/view/customer/addCustomer.html
+++ b/app/view/customer/addCustomer.html
@@ -1,4 +1,4 @@
-<legend>Cadastro de cliente</legend>
+<legend class="text-gray font-18"><i class="glyphicon glyphicon-user"></i> Cadastre-se</legend>
 
 <!--presentation-->
 <div class="col-xs-offset-2 col-sm-offset-2 col-md-offset-2 col-lg-offset-2">
@@ -15,7 +15,7 @@
         <label class="col-sm-2 control-label">Nome<span class="text-danger">*</span></label>
 
         <div class="col-xs-12 col-sm-6 col-md-6">
-           <input class="form-control input-sm text-capitalize"
+            <input class="form-control input-sm text-capitalize"
                    placeholder="Nome sobrenome"
                    name="ds_name"
                    type="text"
@@ -41,7 +41,7 @@
         <label class="col-sm-2 control-label">E-mail<span class="text-danger">*</span></label>
 
         <div class="col-xs-12 col-sm-6 col-md-6">
-            
+
             <input class="form-control input-sm text-lowercase"
                    placeholder="E-mail"
                    name="ds_email"
@@ -71,7 +71,7 @@
 
         <div class="col-xs-12 col-sm-6 col-md-6">
 
-           <input class="form-control input-sm"
+            <input class="form-control input-sm"
                    placeholder="Senha"
                    name="ds_password"
                    type="password"
@@ -102,7 +102,7 @@
 
         <div class="col-xs-12 col-sm-6 col-md-6">
 
-           <input class="form-control input-sm"
+            <input class="form-control input-sm"
                    placeholder="Repita a senha"
                    name="re_password"
                    type="password"
