--- a/app/view/customer/upCustomer.html
+++ b/app/view/customer/upCustomer.html
@@ -1,5 +1,5 @@
-<legend>Dados pessoais</legend>
-
+ <legend class="text-gray font-18"><i class="glyphicon glyphicon-user"></i> Meus dados</legend>
+ 
 <div ng-init="customerController">
 
     <!--tabs-->
@@ -439,7 +439,7 @@
 
                     <!--field complement-->
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Complemento</label>
+                        <label class="col-sm-2 control-label">Complemento<span class="text-danger">*</span></label>
 
                         <div class="col-xs-12 col-sm-6 col-md-6">
 
