--- a/app/view/general/main.html
+++ b/app/view/general/main.html
@@ -120,7 +120,7 @@
 
                         <p>{{row.ds_product}}</p>
 
-                        <span class="text-gray"><strong>R$ {{row.nu_value}}</strong></span>
+                        <span class="text-gray"><strong>{{row.nu_value | currency}}</strong></span>
 
                         <div class="pull-right">
 
