--- a/app/view/product/addProduct.html
+++ b/app/view/product/addProduct.html
@@ -1,4 +1,4 @@
-<legend>Cadastro de produto</legend>
+<legend class="text-gray font-18"><i class="glyphicon glyphicon-camera"></i> Novo produto</legend>
 
 <div class="row">
 
