--- a/app/view/product/addProductType.html
+++ b/app/view/product/addProductType.html
@@ -1,4 +1,4 @@
-<legend>Cadastro de tipos de produto</legend>
+<legend class="text-gray font-18"><i class="glyphicon glyphicon-globe"></i> Novo tipo de produto</legend>
 
 <div class="row">
 
