--- a/app/view/product/upProduct.html
+++ b/app/view/product/upProduct.html
@@ -1,4 +1,4 @@
-<legend>Editar produto</legend>
+    <legend class="text-gray font-18"><i class="glyphicon glyphicon-camera"></i> Editar produto</legend>
 
 <div ng-init="getProduct()">
 
