--- a/app/view/user/upUser.html
+++ b/app/view/user/upUser.html
@@ -1,4 +1,4 @@
-<legend>Edição de usuário</legend>
+    <legend class="text-gray font-18"><i class="glyphicon glyphicon-user"></i> Editar usuário</legend>
 
 <div ng-init="getUser()">
 
