--- a/app/view/product/detailProduct.html
+++ b/app/view/product/detailProduct.html
@@ -31,7 +31,7 @@
             <dl class="dl-horizontal">
 
                 <dt class="text-gray">Preço:</dt>
-                <dd>R$ {{row.nu_value}}</dd>
+                <dd>{{row.nu_value | currency}}</dd>
 
                 <dt class="text-gray">Em estoque:</dt>
                 <dd>{{row.nu_quantity}} Und</dd>
@@ -80,6 +80,7 @@
 
                 <span class="btn btn-primary btn-sm"
                       ng-click="addCart(row)"
+                      ng-controller="purchaseController"
                       title="Colocar no carrinho de compras">
 
                     <i class="glyphicon glyphicon-shopping-cart"></i>
@@ -87,6 +88,7 @@
 
                 <span class="btn btn-danger btn-sm"
                       ng-click="addWishList(row.sq_product)"
+                      ng-controller="purchaseController"
                       title="Colocar na lista de desejos">
 
                     <i class="glyphicon glyphicon-heart" ></i>
