--- a/app/view/product/filterProduct.html
+++ b/app/view/product/filterProduct.html
@@ -1,28 +1,32 @@
-<!--row-->
-<div class="row">
+<div ng-init="getProductsByFilter()">
 
-    <!--thumb-->
-    <div ng-controller="productController">
-        <div ng-init="getProductsByFilter()">
+    <legend>{{types}}</legend>
+    <!--row-->
+    <div class="row">
 
-            <div ng-repeat="row in rows" class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+        <!--thumb-->
+        <div ng-repeat="row in rows" class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
 
-                <div class="thumbnail">
+            <div class="thumbnail">
 
-                    <div class="caption">
+                <div class="caption">
 
-                        <a href="" ng-click="detailProduct(row)">
-                            <p align="center"><img src="{{row.im_product_image.encoded}}" class="img-responsive" /></p>
-                        </a>
+                    <a href="" ng-click="detailProduct(row)">
 
-                        <p>{{row.ds_product}}</p>
+                        <p align="center">
+                            <img src="{{row.im_product_image.encoded}}" class="img-responsive"/>
+                        </p>
 
-                        <span class="text-gray"><strong>R$ {{row.nu_value}}</strong></span>
+                    </a>
 
-                        <div class="pull-right">
-                            <i class="glyphicon glyphicon-shopping-cart text-warning cursor-pointer" ng-click="addCart(row)"></i>
-                            <i class="glyphicon glyphicon-heart text-danger cursor-pointer" ng-click="addWishList(row.sq_product)"></i>
-                        </div>
+                    <p>{{row.ds_product}}</p>
+
+                    <span class="text-gray"><strong>{{row.nu_value| currency}}</strong></span>
+
+                    <div class="pull-right" ng-controller="purchaseController">
+
+                        <i class="glyphicon glyphicon-shopping-cart text-warning cursor-pointer" ng-click="addCart(row)"></i>
+                        <i class="glyphicon glyphicon-heart text-danger cursor-pointer" ng-click="addWishList(row.sq_product)"></i>
 
                     </div>
 
@@ -31,8 +35,13 @@
             </div>
 
         </div>
+
+    </div>
+
+    <div class="alert alert-info col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-show="rows == ''">
+        {{constant.MSG0008}}
     </div>
 
 </div>
-<!--row-->
+
 
