--- a/app/view/product/listProduct.html
+++ b/app/view/product/listProduct.html
@@ -1,6 +1,6 @@
 <div ng-init="getProducts()">
 
-    <legend>Produtos</legend>
+    <legend class="text-gray font-18"><i class="glyphicon glyphicon-camera"></i> Produtos</legend>
 
     <!--loop-->
     <div class="row"
@@ -34,7 +34,7 @@
             <dl class="dl-horizontal">
 
                 <dt class="text-gray">Preço:</dt>
-                <dd>R$ {{row.nu_value}}</dd>
+                <dd>{{row.nu_value| currency}}</dd>
 
                 <dt class="text-gray">Em estoque:</dt>
                 <dd>{{row.nu_quantity}} Und</dd>
