--- a/app/view/purchase/cart.html
+++ b/app/view/purchase/cart.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
 
-        <legend class="text-gray font-18">Carrinho de compras</legend>
+        <legend class="text-gray font-18"><i class="glyphicon glyphicon-shopping-cart"></i> Carrinho de compras</legend>
 
         <!--form buy-->
         <form name="form" class="form-group-sm" novalidate>
@@ -15,14 +15,15 @@
                 <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
 
                     <!--image-->
-                    <a href="" ng-click="detailProduct(row)">
+                    <a href="" ng-click="detailProduct(row)" ng-controller="productController">
 
                         <div class="thumbnail">
-                            <img class="caption img-responsive"
-                                 src={{row.im_product_image.encoded}}
-                                 height="200"
-                                 width="200"
-                                 />
+                            <img
+                                class="caption img-responsive"
+                                src={{row.im_product_image.encoded}}
+                                height="200"
+                                width="200"
+                                />
                         </div>
 
                     </a>
@@ -634,7 +635,7 @@
                             <i class="glyphicon glyphicon-remove"></i>
                         </button>
 
-                        <button class="btn btn-success btn-sm" ng-click="">
+                        <button class="btn btn-success btn-sm" ng-click="buy()">
                             Confirmar
                             <i class="glyphicon glyphicon-ok"></i>
                         </button>
