--- a/app/view/purchase/wishList.html
+++ b/app/view/purchase/wishList.html
@@ -1,6 +1,6 @@
 <div ng-init="getWishList()">
 
-    <legend><i class="glyphicon glyphicon-heart text-gray"></i> Lista de desejos</legend>
+    <legend class="text-gray font-18"><i class="glyphicon glyphicon-heart"></i> Lista de desejos</legend>
 
     <!--loop-->
     <div class="row"
@@ -11,14 +11,15 @@
         <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
 
             <!--image-->
-            <a href="" ng-click="detailProduct(row)">
+            <a href="" ng-click="detailProduct(row)" ng-controller="productController">
 
                 <div class="thumbnail">
-                    <img class="caption img-responsive"
-                         src={{row.im_product_image.encoded}}
-                         height="200"
-                         width="200"
-                         />
+                    <img
+                        class="caption img-responsive"
+                        src={{row.im_product_image.encoded}}
+                        height="200"
+                        width="200"
+                        />
                 </div>
 
             </a>
