--- a/app/view/user/addUser.html
+++ b/app/view/user/addUser.html
@@ -1,4 +1,4 @@
-<legend>Cadastro de usuário</legend>
+    <legend class="text-gray font-18"><i class="glyphicon glyphicon-user"></i> Novo usuário</legend>
 
 <!--presentation-->
 <div class="row">
