--- a/app/view/error/systemError.html
+++ b/app/view/error/systemError.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>Houve um erro no sistema, por favor tente em instantes ou entre em contato com o suporte técnico.</div>
-    </body>
-</html>
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+
+    <h4 class="alert alert-danger">
+        {{constant.MSG0013}}
+    </h4>
+
+    <p class="text-gray">
+        Se puder e quiser ajudar a melhorar nossa loja. Por favor reporte este erro no endereço:
+    </p>
+
+    <p>
+        <a href="mailto:sac@fulopatchwork.com.br?Subject=Tela%20erro" target="_blank">sac@fulopatchwork.com.br</a>
+    </p>
+
+</div>
