--- a/app/view/customer/mainCustomer.html
+++ b/app/view/customer/mainCustomer.html
@@ -1,21 +1,4 @@
-<div ng-init="getOrdersByUser()">
-
-    <!--help-->
-    <span class="pull-right text-info cursor-pointer"
-          data-toggle="collapse"
-          data-target="#help"
-          >
-        <i class="glyphicon glyphicon-question-sign"></i> Ajuda
-    </span>
-
-    <div class="collapse row" id="help">
-        <ul class="text-info">
-            <li>Clicando no número do pedido, você pode ver os produtos referente ao pedido.</li>
-            <li>Clicando no número de rastreio, você pode verificar o andamento da entrega do pedido¹.</li>
-            <li>[¹] Os dados referentes ao rastreio são fornecidos pelos correios.</li>
-        </ul>
-    </div>
-    <!--help-->
+<div ng-controller="purchaseController" ng-init="getOrdersByUser()">
 
     <legend class="text-gray font-18"><i class="glyphicon glyphicon-gift"></i> Meus Pedidos</legend>
 
@@ -23,31 +6,25 @@
 
         <div ng-repeat="order in orders">
 
-            <legend
-                class="text-success cursor-pointer font-18"
-                data-toggle="collapse"
-                data-target="#prod{{order.sq_order}}"
-                ng-click="getProductsOrder(order.sq_order)"
-                >Pedido Nº: {{order.sq_order}}
-            </legend>
+            <p class="text-success font-18 well well-sm">
+                Pedido Nº: {{order.sq_order}}
+            </p>
 
             <!--first-->
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
 
                 <dl class="dl-horizontal">
 
-                    <dt class="text-gray">Rastreio:</dt>
-                    <dd class="text-success cursor-pointer"
-                        data-toggle="collapse"
-                        data-target="#track{{order.sq_order}}"
-                        >{{order.nu_tracker}}
+                    <dt class="text-gray"
+                        ng-show="order.nu_tracker"
+                        >Nº Rastreio:</dt>
+                    <dd>
+                        {{order.nu_tracker}}
                     </dd>
 
                     <dt class="text-gray">Status:</dt>
                     <dd class="text-capitalize">{{order.ds_status}}</dd>
-
                 </dl>
-
             </div>
             <!--first-->
 
@@ -61,9 +38,7 @@
 
                     <dt class="text-gray">Valor Total:</dt>
                     <dd>{{order.nu_total}}</dd>
-
                 </dl>
-
             </div>
             <!--second-->
 
@@ -85,6 +60,25 @@
             </div>
             <!--third-->
 
+            <!--buttons-->
+            <div class="form-group">
+
+                <button
+                    class="btn btn-primary btn-sm"
+                    ng-click="getProductsOrder(order.sq_order)">
+                    Mostrar Produtos
+                </button>
+
+                <button
+                    class="btn btn-success btn-sm"
+                    ng-click="tracker(order.nu_tracker)"
+                    ng-show="order.nu_tracker">
+                    Rastrear
+                </button>
+
+            </div>
+
+            <hr />
             <div class="collapse" id="prod{{order.sq_order}}">
 
                 <table class="table table-responsive table-hover table-striped">
@@ -104,23 +98,44 @@
                             <td>{{product.ds_product}}</td>
                             <td>{{product.nu_value| currency}}</td>
                             <td>{{product.nu_quantity}} und.</td>
-
                         </tr>
-
                     <td>Taxa de entrega</td>
                     <td>{{order.nu_farevalue| currency}}</td>
                     <td>1</td>
 
                     </tbody>
-
                 </table>
 
+                <hr />
             </div>
 
-            <div class="collapse" id="track{{order.sq_order}}">
-                <h1>Tracker</h1>
-            </div>
+            <div class="collapse" id="track{{order.nu_tracker}}">
 
+
+                <table class="table table-hover table-striped">
+
+                    <thead>
+
+                        <tr>
+                            <th>Data</th>
+                            <th>Local</th>
+                            <th>Status</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+
+                        <tr ng-repeat="item in sro| orderBy:'-data':true">
+
+                            <td>{{item.data}}</td>
+                            <td>{{item.local}}</td>
+                            <td>{{item.status}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <hr />
+            </div>
         </div>
 
         <div class="alert alert-info col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-show="orders == ''">
