--- a/app/view/purchase/cart.html
+++ b/app/view/purchase/cart.html
@@ -560,7 +560,7 @@
                                 </tr>
 
                                 <tr>
-                                    <td>1</td>
+                                    <td></td>
                                     <td>Taxa de entrega</td>
                                     <td>{{cart.nu_farevalue| currency}}</td>
                                 </tr>
@@ -614,9 +614,11 @@
                     </div>
                 </div>
                 <!--buttons-->
-
             </div>
+            <!--modal footer-->
         </div>
+        <!--modal content-->
     </div>
+    <!--modal dialog-->
 </div>
 <!--modal confirmation order-->
