--- a/app/view/purchase/confirmOrder.html
+++ b/app/view/purchase/confirmOrder.html
@@ -1,15 +1,11 @@
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-    <h4 class="alert alert-danger">
-        {{constant.MSG0013}}
+    <h4 class="alert alert-success">
+        {{constant.MSG0014}}
     </h4>
 
-    <p class="text-gray">
-        Se puder e quiser ajudar a melhorar nossa loja. Por favor reporte este erro no endereço:
-    </p>
-
-    <p>
-        <a href="mailto:sac@fulopatchwork.com.br?Subject=Tela%20erro" target="_blank">sac@fulopatchwork.com.br</a>
-    </p>
+    <button class="btn-sm btn-primary">
+        Ir paraMeus Pedidos
+    </button>
 
 </div>
